Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/Eco_Sync_Sensor_Detail_24_Hour__c.object-meta.xml
<CustomObject>
    <label>Eco Sync Sensor Detail 24 Hour</label>
    <nameField>
        <displayFormat>CFCES-{000000}</displayFormat>
        <label>Eco Sync Sensor Detail 24 Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eco Sync Sensor Detail 24 Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>