Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>