Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/fields/Light_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Light_Intensity__c</fullName>
    <label>Light Intensity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>