Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/fields/Soil_Phosphorus__c.field-meta.xml
<CustomField>
    <fullName>Soil_Phosphorus__c</fullName>
    <label>Soil Phosphorus</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>