Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/fields/Transmitter_Battery__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Battery__c</fullName>
    <label>Transmitter Battery</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>