Ecosync Website/main/default/objects/Eco_Sync_Sensor_Detail_24_Hour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date_Time__c</columns>
    <columns>Atmosphere_Humidity__c</columns>
    <columns>Atmosphere_Temperature__c</columns>
    <columns>Soil_Phosphorus__c</columns>
    <columns>Soil_Potassium__c</columns>
    <columns>Soil_Temperature__c</columns>
    <columns>Transmitter_Battery__c</columns>
    <columns>Soil_Ph__c</columns>
    <columns>Soil_Nitrogen__c</columns>
    <columns>Soil_Moisture_Percentage__c</columns>
    <columns>Soil_Electric_Conductivity__c</columns>
    <columns>Rain_Percentage__c</columns>
    <columns>Light_Intensity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>